--- a/bookPage.html
+++ b/bookPage.html
@@ -17,7 +17,7 @@
     <header>
       <div class="container">
         <div class="header-content">
-          <a href="./mainPage.html">
+          <a href="./index.html">
             <h1 id="logo">
               <span class="first">Books</span
               ><span class="second">Shelter</span>
